--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master test]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -30,13 +30,16 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
+
+
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build .
+        jupyter-book build book
+
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.6.1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_build/html
+        publish_dir: ./book/_build/html
